<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/current_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/text_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="@string/alarm_current"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/alarm_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_current"
            android:layout_centerHorizontal="true"
            android:paddingTop="4dp"
            android:text="@string/alarm_none"
            android:textSize="48sp" />

    </RelativeLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/alarm_cancel"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/alarm_cancel" />

        <Button
            android:id="@+id/alarm_cancel_pick"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_cancel_pick"
            android:visibility="gone"/>

        <Button
            android:id="@+id/alarm_create"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_create" />

        <Button
            android:id="@+id/alarm_set"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_set"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>