<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingRight="4dp"
        android:paddingEnd="4dp">

        <EditText
            android:id="@+id/minutes_edit"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_00"
            android:textSize="36sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/minutes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/minutes"
        android:layout_toStartOf="@id/minutes">

        <EditText
            android:id="@+id/hours_edit"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_00"
            android:textSize="36sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/minutes"
        android:layout_toEndOf="@id/minutes">

        <EditText
            android:id="@+id/seconds_edit"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_00"
            android:textSize="36sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/seconds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/hours_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/left_colon"
        android:layout_toStartOf="@+id/left_colon"
        android:layout_alignBottom="@+id/minutes_timer"
        android:text="@string/hint_00"
        android:textSize="48sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/left_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/minutes"
        android:layout_toStartOf="@+id/minutes"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/colon"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/minutes_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hint_00"
        android:textSize="48sp"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingRight="4dp"
        android:paddingEnd="4dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/right_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/minutes"
        android:layout_toEndOf="@+id/minutes"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/colon"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/seconds_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/right_colon"
        android:layout_toEndOf="@+id/right_colon"
        android:layout_alignBottom="@+id/minutes_timer"
        android:text="@string/hint_00"
        android:textSize="48sp"
        android:gravity="center"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/clear"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:enabled="false"/>

        <Button
            android:id="@+id/reset"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:enabled="false"/>

        <Button
            android:id="@+id/start"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:enabled="false"/>
    </LinearLayout>

</RelativeLayout>